# algot_market_data

./: .env.default  README.md  pyproject.toml
markets/: alpaca.py  alpaca_data.py  binance_data.py
playground/coinbase_blog/: coinbase_blog_data.py  data_by_post.csv  data_by_symbol.csv  symbols_verification.csv
