[tool.poetry]
name = "algot_market_data"
version = "0.1.0"
description = ""
authors = ["Łukasz Sawaniewski <l.sawaniewski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.18.0"
websocket-client = "^1.1.0"
requests = "^2.26.0"
pandas = "^1.3.0"
alpaca-trade-api = "^1.2.3"
tqdm = "^4.61.2"
python-binance = "^1.0.12"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"
jupyter = "^1.0.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
